--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,7 +20,7 @@ android {
 
 dependencies {
   def googlePlayServicesVersion = project.hasProperty('googlePlayServicesVersion') ? project.googlePlayServicesVersion : DEFAULT_GOOGLE_PLAY_SERVICES_VERSION
-    compile 'com.facebook.react:react-native:0.56.0'
+    compile 'com.facebook.react:react-native:+'
     compile "com.google.android.gms:play-services-analytics:16.0.3"
 
 }
